--- a/metadata.yaml
+++ b/metadata.yaml
@@ -33,5 +33,6 @@ subjects:
 - !lcsh 'Conduct of life -- Juvenile fiction'
 - !lcsh 'Christian life -- Juvenile fiction'
 - !lcsh 'Aunts -- Juvenile fiction'
+- GITenberg
 title: The Twin Cousins
 url: http://www.gutenberg.org/ebooks/23540
